--- a/base-config.yaml
+++ b/base-config.yaml
@@ -3,11 +3,10 @@ max_concurrent_jobs: 1
 # Via servers to use in matrix.to URLs
 via_servers:
     - matrix.org
-# Actions to take when bot is triggered
+# Actions to take when bot is triggered - all are true/false,
+# except report_to_room which should be set to room ID/alias
+# (in quotes) of the desired room, e.g. '#mods:myserver.local'
 actions:
-    # Ignore images that pass the test
     ignore_sfw: true
-    # Reply directly to messages with their image score
     direct_reply: false
-    # Set to a room ID/alias to report to another room
     report_to_room: false
