--- a/base-config.yaml
+++ b/base-config.yaml
@@ -1,12 +1,15 @@
 # Maximum concurrent image processing jobs allowed
 max_concurrent_jobs: 1
+
 # Via servers to use in matrix.to URLs
 via_servers:
     - matrix.org
+
 # Actions to take when bot is triggered - all are true/false,
 # except report_to_room which should be set to room ID/alias
 # (in quotes) of the desired room, e.g. '#mods:myserver.local'
 actions:
     ignore_sfw: true
+    redact_nsfw: false
     direct_reply: false
     report_to_room: false
