--- a/base-config.yaml
+++ b/base-config.yaml
@@ -1,6 +1,11 @@
-# Maximum concurrent image processing jobs allowed
+# All actions are true/false, except report_to_room
+# which should be the room ID in single quotes of the
+# desired room, e.g. '!room:myserver.local'
 max_concurrent_jobs: 1
-
-# Via servers to use in matrix.to URLs
 via_servers:
     - matrix.org
+actions:
+    ignore_sfw: true
+    redact_nsfw: false
+    direct_reply: false
+    report_to_room: ""
